--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>CENTER FOR PUBLIC ENTERPRISE, INC. – Nonprofit • 2025</title>
 <link rel="stylesheet" href="assets/styles.css"/><link rel="icon" href="images/logo.png">
-<meta name="data-ein" content="882707214"><meta name="data-name" content="CENTER FOR PUBLIC ENTERPRISE, INC.">
+<meta name="data-ein" content="882707214">
+<meta name="facebook-domain-verification" content="p4iu12qf4mxm60691qeivjncutbrxq" />
+<meta name="data-name" content="CENTER FOR PUBLIC ENTERPRISE, INC.">
 <meta name="data-email" content="contact@centerforpublic.xmdn100.shop"><meta name="data-phone" content="+16016122438">
 <meta name="data-address" content="184 STOCKHOLM ST. APT 2R,
 BROOKLYN, NY 11237"><meta name="data-map" content="184+STOCKHOLM+ST+APT+2R,+BROOKLYN,+NY+11237">
